fix : fixed resources links icon overflow

--- a/src/pages/Resources/Resources.scss
+++ b/src/pages/Resources/Resources.scss
@@ -6,6 +6,7 @@
 
   &__link {
     position: relative;
+    overflow: hidden;
     width: 40%;
     margin-right: 1rem;
     margin-bottom: 1rem;
